--- a/src/Login.html
+++ b/src/Login.html
@@ -29,11 +29,11 @@
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Inicial.html'">Início</button>
+            onclick="window.location.href = 'Inicial.html'">Início</button>
           <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Agendamento.html'">Agendar</button>
-          <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Login.html'" disabled>Login</button>
+            onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+          <button type="button" class="btn btn-outline-light" onclick="window.location.href = 'Login.html'"
+            disabled>Login</button>
           <button type="button" class="btn btn-outline-light"
             onclick="window.location.href = 'Perfil.html'">Perfil</button>
         </div>
@@ -61,39 +61,48 @@
                 <div class="row">
 
 
-                  <p>Nome de usuário ou nome cadastrado:</p>
+                  <p>Nome de usuário ou Email:</p>
                   <div class="col-9 ">
-                    <input class="form-control" type="text" placeholder="" aria-label="default input example">
+                    <input id="inputUserLogin" class="form-control" type="text" placeholder=""
+                      aria-label="default input example">
                   </div>
                 </div>
                 <div class="row">
                   <p>Senha:</p>
                   <div class="col-9 ">
-                    <input class="form-control" type="text" placeholder="" aria-label="default input example">
+                    <input id="inputSenhaLogin" class="form-control" type="text" placeholder=""
+                      aria-label="default input example">
                   </div>
                 </div>
 
-
-
-
                 <div class="col-6 ">
-                  <input type="checkbox"> Manter conectado
+                  <input id="inputManterConectado" type="checkbox"> Manter conectado
                   <br> </br>
                 </div>
 
+                <button type="button" class="btn btn-outline-dark"
+                  onclick="window.location.href='RecuperarSenha.html'">Esqueci a senha</button>
+                <button type="button" class="btn btn-outline-dark"
+                  onclick="window.location.href='CadastroUsuário.html'">Cadastrar-se</button>
+
+                <div class="mt-3 col-12 justify-content-center row">
+                  <button type="button" class="btn btn-outline-dark col-6" onclick="logar()">Entrar</button>
+                </div>
 
 
-
-
-
-                <button type="button" class="btn btn-outline-dark" onclick="window.location.href='RecuperarSenha.html'">Esqueci a senha</button>
-                <button type="button" class="btn btn-outline-dark" onclick="window.location.href='CadastroUsuário.html'">Cadastrar-se</button>
-
-                <br> </br>
-                <div class=" row d-flex justify-content-center align-content-center "> <a href="http://127.0.0.1:5500/pco-si-2023-1-p1-proj-web-t1-grupo-3-lavadrive/src/Agendamento.html"
-                    class="btn btn-outline-dark col-4">Entrar</a> </div>
-
-
+                <!--Mensagem toast-->
+                <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                  <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-header">
+                      <strong class="me-auto">LavaDrive</strong>
+                      <small>Agora</small>
+                      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                    <div class="toast-body">
+                      <p id="toastMensage">Mensagem</p>
+                    </div>
+                  </div>
+                </div>
 
               </div>
           </div>
@@ -168,6 +177,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+  <!--Script que gerencia as contas e cadastros-->
+  <script src="Scripts/Usuarios.js"></script>
 </body>
 
 </html>
