--- a/src/Agendamento.html
+++ b/src/Agendamento.html
@@ -12,10 +12,6 @@
   <!--Bootstrap (CSS)-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <!--FontAwesome-->
-  <script src="https://kit.fontawesome.com/ee6502c5bc.js" crossorigin="anonymous"></script>
-  <!--JQuery-->
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
 </head>
 
@@ -26,18 +22,16 @@
       <div class="container-fluid">
 
         <!--Logo-->
-        <a href="Inicial.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
+        <a href="index.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Inicial.html'">Início</button>
+            onclick="window.location.href = 'index.html'">Início</button>
           <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Agendamento.html'" disabled>Agendar</button>
-          <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Login.html'">Login</button>
-          <button type="button" class="btn btn-outline-light"
-            onclick="window.location.href = 'Perfil.html'">Perfil</button>
+            onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+          <button id="perfil/login" type="button" class="btn btn-outline-light"
+            onclick="irParaTela()">Login</button>
         </div>
 
       </div>
@@ -283,6 +277,10 @@
     crossorigin="anonymous"></script>
   <!--Script da tela de agendamento-->
   <script src="Scripts/Agendamento.js"></script>
+  <!--FontAwesome-->
+  <script src="https://kit.fontawesome.com/ee6502c5bc.js" crossorigin="anonymous"></script>
+  <!--Script que gerencia as contas e cadastros-->
+  <script src="Scripts/Usuarios.js"></script>
 </body>
 
 </html>
