--- a/src/Inicial.html
+++ b/src/Inicial.html
@@ -30,20 +30,18 @@
 
 
         <!--Logo-->
-        <a href="Inicial.html"><img
+        <a href="index.html"><img
             src="https://github.com/ICEI-PUC-Minas-PCO-SI/pco-si-2023-1-p1-proj-web-t1-grupo-3-lavadrive/blob/Develop/src/img/lavaDriveLogo.png?raw=true"
             class="rounded" style="width: 80%;"></a>
 
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-outline-light" onclick="window.location.href = 'Inicial.html'"
-            disabled>Início</button>
+          <button type="button" class="btn btn-outline-light"
+            onclick="window.location.href = 'index.html'">Início</button>
           <button type="button" class="btn btn-outline-light"
             onclick="window.location.href = 'Agendamento.html'">Agendar</button>
-          <button type="button" class="btn btn-outline-light"
-            onclick="window.location.href = 'Login.html'">Login</button>
-          <button type="button" class="btn btn-outline-light"
-            onclick="window.location.href = 'Perfil.html'">Perfil</button>
+          <button id="perfil/login" type="button" class="btn btn-outline-light"
+            onclick="irParaTela()">Login</button>
         </div>
 
       </div>
@@ -199,6 +197,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+    <!--Script que gerencia as contas e cadastros-->
+  <script src="Scripts/Usuarios.js"></script>
   <style>
     html,
     body {
