--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -23,19 +23,17 @@
             <div class="container-fluid">
 
                 <!--Logo-->
-                <a href="Inicial.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
+                <a href="index.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
                 <!--Opções-->
-                <div class="btn-group d-flex" role="group" aria-label="Basic example">
-                    <button type="button" class="btn btn-outline-light"
-                        onclick="window.location.href = 'Inicial.html'">Início</button>
-                    <button type="button" class="btn btn-outline-light"
-                        onclick="window.location.href = 'Agendamento.html'">Agendar</button>
-                    <button type="button" class="btn btn-outline-light"
-                        onclick="window.location.href = 'Login.html'">Login</button>
-                    <button type="button" class="btn btn-outline-light"
-                        onclick="window.location.href = 'Perfil.html'">Perfil</button>
-                </div>
+        <div class="btn-group d-flex" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-outline-light"
+              onclick="window.location.href = 'index.html'">Início</button>
+            <button type="button" class="btn btn-outline-light"
+              onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+            <button id="perfil/login" type="button" class="btn btn-outline-light"
+              onclick="irParaTela()">Login</button>
+          </div>
 
             </div>
         </nav>
@@ -105,7 +103,8 @@
                         onclick="window.location.href = 'TrocarSenha.html'" style="width: 8rem;">Trocar
                         senha</label>
 
-                    <button type="radio" class="btn-check" name="options" id="salvar" onclick="salvarAlteracoes()">Salvar</button>
+                    <button type="radio" class="btn-check" name="options" id="salvar"
+                        onclick="salvarAlteracoes()">Salvar</button>
                     <label class="btn btn-light border mt-4 ms-3" for="salvar" style="width: 8rem;">Salvar</label>
                 </div>
 
@@ -116,17 +115,17 @@
         <!--Mensagem toast-->
         <div class="toast-container position-fixed bottom-0 end-0 p-3">
             <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-              <div class="toast-header">
-                <strong class="me-auto">LavaDrive</strong>
-                <small>Agora</small>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-              </div>
-              <div class="toast-body">
-                <p id="toastMensage">Mensagem</p>
-              </div>
+                <div class="toast-header">
+                    <strong class="me-auto">LavaDrive</strong>
+                    <small>Agora</small>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                    <p id="toastMensage">Mensagem</p>
+                </div>
             </div>
-          </div>
-          
+        </div>
+
     </main>
 
     <!--Rodape-->
@@ -198,6 +197,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <!--Script que gerencia as contas e cadastros-->
+    <script src="Scripts/Usuarios.js"></script>
 </body>
 
 </html>
