Ajustes na Navbar

--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -23,7 +23,7 @@
             <div class="container-fluid">
 
                 <!--Logo-->
-                <a href="index.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
+                <a href="index.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 75%;"></a>
 
                 <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
@@ -74,7 +74,7 @@
                     <img id="perfilImage" class="rounded-circle" src="img/circulo cinza.png" alt="perfil"
                         style="width: 30%;">
                     <p><i class="fa-solid fa-pencil"></i> Editar foto de perfil</p>
-                    <input type="file" id="inputImagem" accept="image/*">
+                    <input type="file" id="inputImagem" accept="image/*" style="width: 54%;">
                 </div>
 
                 <div class="d-flex justify-content-center my-3">
