--- a/src/index.html
+++ b/src/index.html
@@ -21,18 +21,14 @@
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <!--FontAwesome-->
   <script src="https://kit.fontawesome.com/ee6502c5bc.js" crossorigin="anonymous"></script>
+
   <!--Cabecalho-->
   <header class="m-0 d-block bg-blue">
     <nav class="navbar">
       <div class="container-fluid">
 
-
-
-
         <!--Logo-->
-        <a href="index.html"><img
-            src="https://github.com/ICEI-PUC-Minas-PCO-SI/pco-si-2023-1-p1-proj-web-t1-grupo-3-lavadrive/blob/Develop/src/img/lavaDriveLogo.png?raw=true"
-            class="rounded" style="width: 80%;"></a>
+        <a href="index.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 75%;"></a>
 
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
@@ -40,12 +36,12 @@
             onclick="window.location.href = 'index.html'">Início</button>
           <button type="button" class="btn btn-outline-light"
             onclick="window.location.href = 'Agendamento.html'">Agendar</button>
-          <button id="perfil/login" type="button" class="btn btn-outline-light"
-            onclick="irParaTela()">Login</button>
+          <button id="perfil/login" type="button" class="btn btn-outline-light" onclick="irParaTela()">Login</button>
         </div>
 
       </div>
     </nav>
+
   </header>
 
   <!--Conteudos-->
@@ -86,6 +82,7 @@
               </div>
             </div>
           </div>
+
           <div class="card" style="width: 12rem; height: 35rem; border-color:#2a2a2b; margin-right: 12px;">
             <img src="https://cdn-icons-png.flaticon.com/512/3554/3554364.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -102,20 +99,16 @@
                   href="Agendamento.html ">Clique aqui</a> para agendar! </p>
             </div>
           </div>
-          <div class="card text-center">
-            <div class="card-header">
 
-            </div>
+          <div class="card text-center">
             <div class="card-body">
               <h5 class="card-title" style="color: black;">Deseja se tornar um cliente?</h5>
               <p class="card-text" style="color: #000000;">Clique no botão abaixo para criar seu perfil e ter acesso a
                 todas as promoções e ficar por dentro de tudo que o site disponibiliza para você!</p>
-              <a href="Perfil.html" class="btn btn-primary">Crie sua conta</a>
-            </div>
-            <div class="card-footer text-body-secondary">
-
+              <a href="CadastroUsuário.html" class="btn btn-primary">Crie sua conta</a>
             </div>
           </div>
+
         </div>
       </div>
       <!--Rodape-->
@@ -221,7 +214,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-    <!--Script que gerencia as contas e cadastros-->
+  <!--Script que gerencia as contas e cadastros-->
   <script src="Scripts/Usuarios.js"></script>
   <style>
     html,
@@ -251,20 +244,9 @@
       color: purple;
     }
 
-
     .payList {
       list-style-type: none;
     }
-
-
-    .bg-blue {
-      background-color: #3a3838;
-    }
-
-    .bg-darkBlue {
-      background-color: #0e0d0d;
-    }
-
 
     .info:link {
       color: white;
