--- a/src/Administrador.html
+++ b/src/Administrador.html
@@ -105,7 +105,7 @@
             <h1>Serviços Concluídos</h1>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card-hidden">
+                    <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Nome do Cliente</h5>
                             <p class="card-text">Modelo do Carro: Modelo XYZ</p>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card-hidden">
+                    <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Nome do Cliente</h5>
                             <p class="card-text">Modelo do Carro: Modelo XYZ</p>
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card-hidden">
+                    <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Nome do Cliente</h5>
                             <p class="card-text">Modelo do Carro: Modelo XYZ</p>
