--- a/src/TrocarSenha.html
+++ b/src/TrocarSenha.html
@@ -25,6 +25,21 @@
       border-radius: 5px;
     }
 
+    .popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 300px;
+      padding: 20px;
+      background-color: #f1f1f1;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      text-align: center;
+      z-index: 9999;
+    }
+
     @media (max-width: 576px) {
       .main-content {
         padding: 1.5rem;
@@ -90,10 +105,15 @@
               <label for="confirm-password">Confirme a nova senha:</label>
               <input type="password" class="form-control" id="confirm-password" placeholder="Confirme sua nova senha">
             </div>
-            <button type="submit" class="btn btn-primary">Trocar Senha</button>
+            <button type="submit" class="btn btn-primary" onclick="exibirPopup()">Trocar Senha</button>
           </form>
         </div>
       </div>
+    </div>
+    <div id="meuPopup" class="popup">
+      <h2>Atenção</h2>
+      <p>Senha alterada com sucesso!</p>
+      <button onclick="fecharPopup()">Fechar</button>
     </div>
   </main>
 
@@ -164,6 +184,7 @@
     crossorigin="anonymous"></script>
     <!--Script que gerencia as contas e cadastros-->
   <script src="Scripts/Usuarios.js"></script>
+  <script src="Scripts/TrocarSenha.js"></script>
 </body>
 
 </html>
