Criação do json e js de avaliação

--- a/src/Avaliacao.html
+++ b/src/Avaliacao.html
@@ -145,6 +145,7 @@
         crossorigin="anonymous"></script>
     <!--Script que gerencia as contas e cadastros-->
     <script src="Scripts/Usuarios.js"></script>
+    <script src="Scripts/Avaliacao.js"></script>
 </body>
 
 </html>
