Alterações na funcionalidade de avaliação

--- a/src/Avaliacao.html
+++ b/src/Avaliacao.html
@@ -71,7 +71,7 @@
 
                 <!--Finalizar-->
                 <div class="row container-fluid justify-content-end mb-4">
-                    <button class="btn btn-outline-info mb-2" style="width: 10rem;" type="button">Finalizar</button>
+                    <button class="btn btn-outline-info mb-2" style="width: 10rem;" type="button" id="submit">Finalizar</button>
                 </div>
             </div>
         </div>
