Atualização da funcionalidade de agendamento

--- a/src/Agendamento.html
+++ b/src/Agendamento.html
@@ -163,40 +163,40 @@
         <h4>Horários</h4>
         <div class="mb-3">
 
-          <input type="radio" class="btn-check" name="time1" id="time1" autocomplete="off">
-          <label class="btn btn-light border my-1" onclick="tempos(1)" onclick="definirhora(1)"id="timea1 " for="time1"
+          <input type="radio" class="btn-check" name="time" id="time1" autocomplete="off">
+          <label class="btn btn-light border my-1" onclick="tempos(1);definirhora(8)" id="timea1 " for="time1"
             style="width: 10rem;">8:00h</label>
 
-          <input type="radio" class="btn-check" name="time2" id="time2" autocomplete="off">
-          <label class="btn btn-light border my-1" onclick="tempos(2)" id="timea2 " for="time2"
+          <input type="radio" class="btn-check" name="time" id="time2" autocomplete="off">
+          <label class="btn btn-light border my-1" onclick="tempos(2);definirhora(9)" id="timea2 " for="time2"
             style="width: 10rem;">9:00h</label>
 
-          <input type="radio" class="btn-check" name="time3" id="time3" autocomplete="off">
-          <label class="btn btn-light border my-1" onclick="tempos(3)" id="timea3 " for="time3"
+          <input type="radio" class="btn-check" name="time" id="time3" autocomplete="off">
+          <label class="btn btn-light border my-1" onclick="tempos(3);definirhora(10)" id="timea3 " for="time3"
             style="width: 10rem;">10:00h</label>
 
-          <input type="radio" class="btn-check" name="time4" id="time4" autocomplete="off">
-          <label class="btn btn-light border my-1" onclick="tempos(4)" id="timea4 " for="time4"
+          <input type="radio" class="btn-check" name="time" id="time4" autocomplete="off">
+          <label class="btn btn-light border my-1" onclick="tempos(4);definirhora(11)" id="timea4 " for="time4"
             style="width: 10rem;">11:00h</label>
 
-          <input type="radio" class="btn-check" name="time5" id="time5" autocomplete="off">
-          <label class="btn btn-light border my-1" onclick="tempos(5)" id="timea5 " for="time5"
+          <input type="radio" class="btn-check" name="time" id="time5" autocomplete="off">
+          <label class="btn btn-light border my-1" onclick="tempos(5);definirhora(13)" id="timea5 " for="time5"
             style="width: 10rem;">13:00h</label>
 
-          <input type="radio" class="btn-check" name="time6" id="time6" autocomplete="off">
-          <label class="btn btn-light border my-1" onclick="tempos(6)" id="timea6 " for="time6"
+          <input type="radio" class="btn-check" name="time" id="time6" autocomplete="off">
+          <label class="btn btn-light border my-1" onclick="tempos(6);definirhora(14)" id="timea6 " for="time6"
             style="width: 10rem;">14:00h</label>
 
-          <input type="radio" class="btn-check" name="time7" id="time7" autocomplete="off">
-          <label class="btn btn-light border my-1" onclick="tempos(7)" id="timea7 " for="time7"
+          <input type="radio" class="btn-check" name="time" id="time7" autocomplete="off">
+          <label class="btn btn-light border my-1" onclick="tempos(7);definirhora(15)" id="timea7 " for="time7"
             style="width: 10rem;">15:00h</label>
 
-          <input type="radio" class="btn-check" name="time8" id="time8" autocomplete="off">
-          <label class="btn btn-light border my-1" onclick="tempos(8)" id="timea8 " for="time8"
+          <input type="radio" class="btn-check" name="time" id="time8" autocomplete="off">
+          <label class="btn btn-light border my-1" onclick="tempos(8);definirhora(16)" id="timea8 " for="time8"
             style="width: 10rem;">16:00h</label>
 
-          <input type="radio" class="btn-check" name="time9" id="time9" autocomplete="off">
-          <label class="btn btn-light border my-1" onclick="tempos(9)" id="timea9 " for="time9"
+          <input type="radio" class="btn-check" name="time" id="time9" autocomplete="off">
+          <label class="btn btn-light border my-1" onclick="tempos(9);definirhora(17)" id="timea9 " for="time9"
             style="width: 10rem;">17:00h</label>
 
           <h5>Horário que o automóvel estará disponível:</h5>
