Correções de responsividade em todo o site

--- a/src/Administrador.html
+++ b/src/Administrador.html
@@ -244,7 +244,7 @@
         <div class="m-0 mt-2 container-fluid bg-blue text-center row">
 
             <!--Metodos de pagamento-->
-            <div class="col-sm-4 col-md-4 col-lg-4">
+            <div class="col-12 col-sm-4 col-md-4 col-lg-4">
                 <ul class="payList">
                     <li>
                         <p>Métodos de pagamento</p>
@@ -258,7 +258,7 @@
             </div>
 
             <!--Contatos-->
-            <div class="col-sm-4 col-md-4 col-lg-4">
+            <div class="col-12 col-sm-4 col-md-4 col-lg-4">
                 <ul class="payList">
                     <li>
                         <p>Métodos de contato</p>
@@ -275,7 +275,7 @@
             </div>
 
             <!--Outros-->
-            <div class="col-sm-4 col-md-4 col-lg-4">
+            <div class="col-12 col-sm-4 col-md-4 col-lg-4">
                 <ul class="payList">
                     <li>
                         <p>Outros links úteis</p>
