--- a/src/QuemSomos.html
+++ b/src/QuemSomos.html
@@ -67,28 +67,6 @@
     <div class="container-fluid row my-5 justify-content-center text-center">
 
       <div class="col-9 shadow rounded">
-        <h2>Equipe Responsável</h2>
-        <div class="row justify-content-center text-center">
-
-          <div class="col-12">
-            <img class="mx-3" src="img/circulo cinza.png" style="max-width: 220px; max-height: 200px;">
-            <img class="mx-3" src="img/circulo cinza.png" style="max-width: 220px; max-height: 200px;">
-            <img class="mx-3" src="img/circulo cinza.png" style="max-width: 220px; max-height: 200px;">
-          </div>
-
-          <div class="col-12">
-            <img class="mx-4" src="img/circulo cinza.png" style="max-width: 220px; max-height: 200px;">
-            <img class="mx-4" src="img/circulo cinza.png" style="max-width: 220px; max-height: 200px;">
-          </div>
-
-        </div>
-      </div>
-
-    </div>
-
-    <div class="container-fluid row my-5 justify-content-center text-center">
-
-      <div class="col-9 shadow rounded">
         <h2>Relatos</h2>
 
         <div class="mx-4 my-2 row justify-content-center">
@@ -129,7 +107,7 @@
     <div class="m-0 mt-2 container-fluid bg-blue text-center row">
 
       <!--Metodos de pagamento-->
-      <div class="col-12 col-lg-4">
+      <div class="col-12 col-sm-4 col-md-4 col-lg-4">
         <ul class="payList">
           <li>
             <p>Métodos de pagamento</p>
@@ -143,7 +121,7 @@
       </div>
 
       <!--Contatos-->
-      <div class="col-12 col-lg-4">
+      <div class="col-12 col-sm-4 col-md-4 col-lg-4">
         <ul class="payList">
           <li>
             <p>Métodos de contato</p>
@@ -162,7 +140,7 @@
       </div>
 
       <!--Outros-->
-      <div class="col-12 col-lg-4">
+      <div class="col-12 col-sm-4 col-md-4 col-lg-4">
         <ul class="payList">
           <li>
             <p>Outros links úteis</p>
