--- a/src/Agendamento.html
+++ b/src/Agendamento.html
@@ -229,7 +229,7 @@
     <div class="m-0 mt-2 container-fluid bg-blue text-center row">
 
       <!--Metodos de pagamento-->
-      <div class="col-12 col-lg-4">
+      <div class="col-12 col-sm-4 col-md-4 col-lg-4">
         <ul class="payList">
           <li>
             <p>Métodos de pagamento</p>
@@ -243,7 +243,7 @@
       </div>
 
       <!--Contatos-->
-      <div class="col-12 col-lg-4">
+      <div class="col-12 col-sm-4 col-md-4 col-lg-4">
         <ul class="payList">
           <li>
             <p>Métodos de contato</p>
@@ -260,7 +260,7 @@
       </div>
 
       <!--Outros-->
-      <div class="col-12 col-lg-4">
+      <div class="col-12 col-sm-4 col-md-4 col-lg-4">
         <ul class="payList">
           <li>
             <p>Outros links úteis</p>
