--- a/src/Inicial.html
+++ b/src/Inicial.html
@@ -100,7 +100,7 @@
         <div class="m-0 mt-2 container-fluid bg-blue text-center row">
 
           <!--Metodos de pagamento-->
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-sm-4 col-md-4 col-lg-4">
             <ul class="payList">
               <li>
                 <p>Métodos de pagamento</p>
@@ -114,7 +114,7 @@
           </div>
 
           <!--Contatos-->
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-sm-4 col-md-4 col-lg-4">
             <ul class="payList">
               <li>
                 <p>Métodos de contato</p>
@@ -133,7 +133,7 @@
 
 
           <!--Outros-->
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-sm-4 col-md-4 col-lg-4">
             <div class="row">
               <div class="col-lg-6">
                 <ul class="payList purple-links">
