--- a/src/Pagamento.html
+++ b/src/Pagamento.html
@@ -193,7 +193,7 @@
     <div class="m-0 mt-2 container-fluid bg-blue text-center row">
 
       <!--Metodos de pagamento-->
-      <div class="col-12 col-lg-4">
+      <div class="col-12 col-sm-4 col-md-4 col-lg-4">
         <ul class="payList">
           <li>
             <p>Métodos de pagamento</p>
@@ -207,7 +207,7 @@
       </div>
 
       <!--Contatos-->
-      <div class="col-12 col-lg-4">
+      <div class="col-12 col-sm-4 col-md-4 col-lg-4">
         <ul class="payList">
           <li>
             <p>Métodos de contato</p>
@@ -224,7 +224,7 @@
       </div>
 
       <!--Outros-->
-      <div class="col-12 col-lg-4">
+      <div class="col-12 col-sm-4 col-md-4 col-lg-4">
         <ul class="payList">
           <li>
             <p>Outros links úteis</p>
