--- a/src/index.html
+++ b/src/index.html
@@ -256,11 +256,11 @@
           <div
             class="row col-10 col-sm-4 col-md-4 col-lg-2 text-center justify-content-center border rounded mx-2 my-1">
 
-            <div class="col-6 col-sm-12 col-md-12 col-lg-12 text-center justify-content-center">
+            <div class="col-sm-12 col-md-12 col-lg-12 text-center justify-content-center">
               <img src="https://cdn-icons-png.flaticon.com/512/3554/3554364.png" class="card-img-top" alt="...">
             </div>
 
-            <div class="col-6 col-sm-12 col-md-12 col-lg-12 card-body text-center">
+            <div class="col-sm-12 col-md-12 col-lg-12 card-body text-center">
               <p class="card-text" style="color: #000000; font-size:small;">No Lavadrive, o comprometimento é a essência
                 de nosso negócio. Nossa equipe está empenhada em fornecer serviços de lavagem excepcionais. </p>
             </div>
@@ -270,11 +270,11 @@
           <div
             class="row col-10 col-sm-4 col-md-4 col-lg-2 text-center justify-content-center border rounded mx-2 my-1">
 
-            <div class="col-6 col-sm-12 col-md-12 col-lg-12 text-center justify-content-center">
+            <div class="col-sm-12 col-md-12 col-lg-12 text-center justify-content-center">
               <img src="https://cdn-icons-png.flaticon.com/512/3967/3967132.png" class="card-img-top" alt="...">
             </div>
 
-            <div class="col-6 col-sm-12 col-md-12 col-lg-12 card-body text-center">
+            <div class="col-sm-12 col-md-12 col-lg-12 card-body text-center">
               <p class="card-text" style="color: #000000; font-size:small;">No Lavadrive, o comprometimento é a essência
                 de nosso negócio. Nossa equipe está empenhada em fornecer serviços de lavagem excepcionais. </p>
             </div>
@@ -299,7 +299,7 @@
         <div class="m-0 mt-2 container-fluid bg-blue text-center row">
 
           <!--Metodos de pagamento-->
-          <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+          <div class="col-12 col-sm-4 col-md-4 col-lg-4">
             <ul class="payList">
               <li>
                 <p>Métodos de pagamento</p>
@@ -313,7 +313,7 @@
           </div>
 
           <!--Contatos-->
-          <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+          <div class="col-12 col-sm-4 col-md-4 col-lg-4">
             <ul class="payList">
               <li>
                 <p>Métodos de contato</p>
@@ -332,7 +332,7 @@
 
 
           <!--Outros-->
-          <div class="col-12 col-sm-12 col-lg-4">
+          <div class="col-12 col-sm-4 col-md-4 col-lg-4">
             <div class="row">
               <div class="col-lg-6">
                 <ul class="payList purple-links">
@@ -343,14 +343,6 @@
                   <li><a href="DúvidasAjuda.html" class="info">Ajuda</a></li>
                   <li><a href="DúvidasAjuda.html" class="info">Dúvidas frequentes</a></li>
                   <li><a href="termosdeprivacidade.html" class="info">Termos de privacidade</a></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul class="payList">
-                  <li>
-                    <p>&nbsp;</p>
-                  </li>
-                  <!-- Adicione aqui o conteúdo extra -->
                 </ul>
               </div>
             </div>
