--- a/src/template.html
+++ b/src/template.html
@@ -51,7 +51,7 @@
     <div class="m-0 mt-2 container-fluid bg-blue text-center row">
 
       <!--Metodos de pagamento-->
-      <div class="col-sm-4 col-md-4 col-lg-4">
+      <div class="col-12 col-sm-4 col-md-4 col-lg-4">
         <ul class="payList">
           <li>
             <p>Métodos de pagamento</p>
@@ -65,7 +65,7 @@
       </div>
 
       <!--Contatos-->
-      <div class="col-sm-4 col-md-4 col-lg-4">
+      <div class="col-12 col-sm-4 col-md-4 col-lg-4">
         <ul class="payList">
           <li>
             <p>Métodos de contato</p>
@@ -82,7 +82,7 @@
       </div>
 
       <!--Outros-->
-      <div class="col-sm-4 col-md-4 col-lg-4">
+      <div class="col-12 col-sm-4 col-md-4 col-lg-4">
         <ul class="payList">
           <li>
             <p>Outros links úteis</p>
