Correção do dropdown da categoria do carro

--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -60,7 +60,7 @@
 
                 <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off"
                     onclick="opcoes(3)">
-                <label class="btn btn-light border mt-4" for="option3" style="width: 80%;">Histórico</label>
+                <label class="btn btn-light border my-4" for="option3" style="width: 80%;">Histórico</label>
 
             </div>
 
