Mudança na cor dos botões e erro no mês do agendamento

--- a/src/CadastroUsuário.html
+++ b/src/CadastroUsuário.html
@@ -45,7 +45,7 @@
     <h1 class="text-center">Cadastro do Usuário</h1>
 
     <div class="container-fluid row justify-content-center">
-      <div class="col-lg-6 col-9 border border-black border-2 justify-content-center rounded-4 m-3 p-2">
+      <div class="col-lg-6 col-9 border border-black border-2 justify-content-center rounded-4 m-3 p-2  bg-body-secondary">
 
         <div class="text-center">
           <img id="imgPerfil" class="rounded-circle" src="/src/img/AvatarPadrão.png" alt="perfil" style="width: 40%;">
