--- a/src/CadastroCarro.html
+++ b/src/CadastroCarro.html
@@ -46,9 +46,9 @@
 
     <!--Info do veículo-->
     <div class="container-fluid row justify-content-center">
-      <div class="col-lg-3 col-6 row border border-black border-2 rounded-4 m-3 p-2">
+      <div class="col-lg-3 col-6 row border border-black border-2 rounded-4 m-3 p-2 bg-body-secondary">
         <div class="d-flex justify-content-center text-center mt-2">
-          <select id="inputcategoria" class="form-select border-info text-center my-1" style="width: 20rem;">
+          <select id="inputcategoria" class="form-select border-dark-subtle text-center my-1" style="width: 20rem;">
             <option value="nc" selected>Categoria do Veículo</option>
             <option value="Hatch">Hatch</option>
             <option value="Sedan">Sedan</option>
@@ -60,7 +60,7 @@
         </div>
 
         <!--Modelo-->
-        <div class="mb-3 justify-content-center">
+        <div class="mb-3 mt-2 justify-content-center">
           <label for="inputmodelo" class="form-label">Modelo:</label>
           <input type="text" class="form-control" id="inputmodelo" placeholder="Ex.: Jeep Compass">
         </div>
@@ -80,7 +80,7 @@
 
         <!--Botoes-->
         <div class="text-center">
-          <button type="button" class="mb-2 btn btn-outline-info" onclick="SalvarCarro()">Adicionar</button>
+          <button type="button" class="mb-2 btn btn-outline-dark" onclick="SalvarCarro()">Adicionar</button>
         </div>
       </div>
 
