--- a/src/Agendamento.html
+++ b/src/Agendamento.html
@@ -47,9 +47,11 @@
       <div class="col-12 col-lg-5 mx-0 mx-lg-4 ms-4 ms-lg-0 pt-1 border text-center rounded" id="tela">
 
         <div class="d-flex justify-content-center text-center my-3">
-          <button class="btn btn-light border mt-4 ms-0" style="width: 2rem;" onclick="agendarOutroCarro(-1)">menos</button>
-              <button class="btn btn-light border mt-4 ms-3" style="width: 3rem;">1/1</button>
-              <button class="btn btn-light border mt-4 ms-3" style="width: 2rem;" onclick="agendarOutroCarro(+1)">mais</button>
+          <button class="btn btn-light border mt-4 ms-0" style="width: 2rem;"
+            onclick="agendarOutroCarro(-1)">menos</button>
+          <button class="btn btn-light border mt-4 ms-3" style="width: 3rem;">1/1</button>
+          <button class="btn btn-light border mt-4 ms-3" style="width: 2rem;"
+            onclick="agendarOutroCarro(+1)">mais</button>
         </div>
 
         <div class="d-flex justify-content-center my-3">
@@ -113,7 +115,7 @@
         <h4>Data</h4>
         <h6 id="mes">Mês</h6>
 
-        <div class="row col-12 my-4 justify-content-center">
+        <div id="dias" class="row col-12 my-4 justify-content-center">
           <input type="radio" class="btn-check" name="dia" id="dia11" autocomplete="off" onclick="definirdia(0)">
           <label class="btn btn-light border my-1 col-2 col-lg-1 m-1 border rounded" for="dia11" style="width: 6rem;">
             <p id="dayNameT0">Domingo</p>
@@ -165,7 +167,7 @@
     <div class="row container-fluid justify-content-center">
       <div class="col-12 col-lg-5 ms-4 ms-lg-0 pt-1 my-2 border text-center rounded">
         <h4>Horários</h4>
-        <div class="mb-3">
+        <div id="horas" class="mb-3">
 
           <input type="radio" class="btn-check" name="time" id="time1" autocomplete="off">
           <label class="btn btn-light border my-1" onclick="tempos(1);definirhora(8)" id="timea1 " for="time1"
@@ -211,6 +213,21 @@
         </div>
 
       </div>
+
+      <!--Mensagem toast-->
+      <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header">
+            <strong class="me-auto">LavaDrive</strong>
+            <small>Agora</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+          <div class="toast-body">
+            <p id="toastMensage">Mensagem</p>
+          </div>
+        </div>
+      </div>
+
     </div>
 
 
@@ -221,7 +238,8 @@
 
         <button class="btn btn-outline-info mb-2" style="width: 10rem;" type="button"
           onclick="finalizar()">Finalizar</button>
-        <button class="casd btn btn-outline-danger mb-2" style="width: 10rem;" type="button" onclick="window.location.href=`index.html`">Cancelar</button>
+        <button class="casd btn btn-outline-danger mb-2" style="width: 10rem;" type="button"
+          onclick="window.location.href=`index.html`">Cancelar</button>
       </div>
     </div>
 
