Modificações na parte de agendamento na tela de administrador

--- a/src/Administrador.html
+++ b/src/Administrador.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 
-<body onload="Mostrar()">
+<body>
     <!--Cabecalho-->
     <header class="m-0 d-block bg-blue">
         <nav class="navbar">
