funcionalidade de histórico

--- a/src/Agendamento.html
+++ b/src/Agendamento.html
@@ -78,7 +78,7 @@
 
         <div class="col-12 col-lg-4 offset-lg-1 mb-3">
           <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" onclick="limpeza(1)">
-          <label class="btn btn-light border mt-2" for="option1" style="width: 100%;">Limpeza Rápida</label>
+          <label class="btn btn-light border mt-2" for="option1" style="width: 100%;">Ducha</label>
           <br>
           <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off" checked
             onclick="limpeza(2)">
@@ -86,14 +86,14 @@
           <br>
           <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off" onclick="limpeza(3)">
           <label class="btn btn-light border mt-2" for="option3" style="width: 100%;">Limpeza Completa</label>
+          <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off" onclick="limpeza(4)">
+          <label class="btn btn-light border mt-2" for="option4" style="width: 100%;">Polimento e Enceramento</label>
         </div>
 
         <!--Descrição-->
         <div class="col-12 col-lg-6 offset-lg-1 border mb-3 rounded">
           <h6 id="limpTitle" class="pt-4">Limpeza Normal</h6>
-          <p id="limpDesc">Limpeza nas máquinas com enxague automático, pinheiro aromático, aspiração completa,
-            hidratação do banco e
-            pretinho no pneu.</p>
+          <p id="limpDesc">Uma higienização mais detalhada e cuidadosa, garantindo um carro impecável.</p>
         </div>
 
       </div>
