--- a/src/Administrador.html
+++ b/src/Administrador.html
@@ -28,6 +28,11 @@
         .toggle-buttons button {
             margin-right: 10px;
         }
+        #cardContainer{
+            max-width: 98%;
+            margin-left: 10px;
+            justify-content: space-between;
+        }
     </style>
 </head>
 
@@ -70,7 +75,7 @@
 
             <h1>Serviços Concluídos</h1>
             <div id="cardContainer" class="row"></div>
-
+                
             <div class="mt-4">
                 <button class="btn btn-primary" id="ver-mais">Ver Avaliações</button>
             </div>
